# lidar-perception-tracker

./: .gitignore  CMakeLists.txt  CONTEXT.md  README.md  pyproject.toml  requirements.txt
config/: default.yaml
launch/: pipeline.launch.py
lidar_tracker/core/data/: kitti_loader.py  synthetic.py
lidar_tracker/core/detection/: base.py  euclidean.py  factory.py  fusion.py  openpcdet_detector.py  point_pillars.py
lidar_tracker/core/evaluation/: geometry3d.py  iou3d.py  metrics.py
lidar_tracker/core/preprocessing/: ego_motion.py  filters.py  ground_filter.py
lidar_tracker/core/tracking/: kalman.py  sort3d.py  track.py
lidar_tracker/nodes/: data_node.py  detection_node.py  preprocessing_node.py  tracking_node.py  visualization_node.py
msg/: Detection.msg  Track.msg
rviz/: pipeline.rviz
scripts/: benchmark.py  evaluate.py  tune_detector.py  tune_tracker.py
tests/: test_metrics.py  test_preprocessing.py  test_tracker.py
